# libitk-feedstock

./: .appveyor.yml  .recipe_maintainers.json  .travis.yml  README.md  appveyor.yml  conda-forge.yml
.azure-pipelines/: azure-pipelines-linux.yml  azure-pipelines-osx.yml  azure-pipelines-win.yml
.ci_support/: linux_.yaml  linux_64_.yaml  linux_64_hdf51.14.3.yaml  linux_64_hdf51.14.4.yaml  linux_64_hdf51.14.6.yaml  linux_64_hdf52.yaml  linux_aarch64_.yaml  linux_aarch64_hdf51.14.4.yaml  linux_aarch64_hdf51.14.6.yaml  linux_aarch64_hdf52.yaml  linux_c_compilergcccxx_compilergxxfortran_compilergfortran.yaml  linux_c_compilertoolchain_ccxx_compilertoolchain_cxxfortran_compilertoolchain_fort.yaml  linux_ppc64le_.yaml  linux_ppc64le_hdf51.14.6.yaml  linux_ppc64le_hdf52.yaml  osx_.yaml  osx_64_.yaml  osx_64_hdf51.14.4.yaml  osx_64_hdf51.14.6.yaml  osx_64_hdf52.yaml  osx_arm64_.yaml  osx_arm64_hdf51.14.4.yaml  osx_arm64_hdf51.14.6.yaml  osx_arm64_hdf52.yaml  osx_c_compilerclangcxx_compilerclangxxfortran_compilergfortran.yaml  osx_c_compilertoolchain_ccxx_compilertoolchain_cxxfortran_compilertoolchain_fort.yaml  win_.yaml  win_64_.yaml  win_64_hdf51.14.4.yaml  win_64_hdf51.14.6.yaml  win_64_hdf52.yaml  win_c_compilervs2008cxx_compilervs2008.yaml  win_c_compilervs2015cxx_compilervs2015.yaml  win_c_compilervs2015cxx_compilervs2015vc14.yaml
.github/: CODEOWNERS
recipe/: 0001-BUG-Fix-HDF5-installation-with-cmake-targets.patch  0001-BUG-use-check_symbol_exists-for-TIFFFieldReadCount.patch  TryRunResults-linux-aarch64.cmake  bld.bat  (+11 more)
recipe/example/: CMakeLists.txt  HelloWorld.cxx
(+1 files in other folders)
